[package]
name = "alfred-rs"
version = "0.5.1" # update html_root_url & README.md
authors = ["Hamid Ghadyani <hamid@hamid.cc>"]
description = """
Write Alfred workflows easily.

https://www.alfredapp.com
"""

documentation = "https://docs.rs/alfred-rs/"
homepage = "https://github.com/spamwax/alfred-workflow"
repository = "https://github.com/spamwax/alfred-workflow"

keywords = ["alfred", "workflow", "updater"]

readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "spamwax/alfred-workflow" }

[dependencies]

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
alfred = "4.0"
failure = "0.1.5"
log = "0.4"
env_logger = "0.6"
tempfile = "^3.0"


chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = { version = "0.8", optional = true }
url = { version = "1.7", optional = true }
url_serde = { version = "0.2.0", optional = true }
semver = {version = "0.9", features = ["serde"], optional = true }
time = { version = "0.1", optional = true }

[dev-dependencies]
mockito = "0.9"

[features]
default = ["updater"]
updater = ["chrono", "reqwest", "semver", "time", "url", "url_serde"]

# are we testing on CI?
ci = ["updater"]
