[package]
name = "alfred-rs"
version = "0.7.0" # update html_root_url & README.md
authors = ["Hamid Ghadyani <hamid@hamid.cc>"]
description = """
Write Alfred workflows easily.

https://www.alfredapp.com
"""

edition = "2018"
rust-version = "1.56"

documentation = "https://docs.rs/alfred-rs/"
homepage = "https://github.com/spamwax/alfred-workflow"
repository = "https://github.com/spamwax/alfred-workflow"

keywords = ["alfred", "workflow", "updater"]
categories = ["development-tools"]

readme = "README.md"
license = "MIT/Apache-2.0"

# [badges]
# travis-ci = { repository = "spamwax/alfred-workflow" }

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
alfred = "4.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
tempfile = "^3.0"

chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true}
url = { version = "2.2", features = ["serde"], optional = true }
semver = {version = "1.0", features = ["serde"], optional = true }

[dev-dependencies]
mockito = "0.31"

[features]
default = ["updater"]
updater = ["chrono", "reqwest", "semver", "url"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "x86_64-apple-ios"]

